Changes between 1.4.17 and 1.4.18.dev
==================================================

- introduce path.ensure_dir() as a synonym for ensure(..., dir=1)

Changes between 1.4.16 and 1.4.17
==================================================

- make py.io.TerminalWriter() prefer colorama if it is available
  and avoid empty lines when separator-lines are printed by
  being defensive and reducing the working terminalwidth by 1

- introduce optional "expanduser" argument to py.path.local
  to that local("~", expanduser=True) gives the home
  directory of "user".

Changes between 1.4.15 and 1.4.16
==================================================

- fix issue35 - define __gt__ ordering between a local path
  and strings

- fix issue36 - make chdir() work even if os.getcwd() fails.

- add path.exists/isdir/isfile/islink shortcuts

- introduce local path.as_cwd() context manager.

- introduce p.write(ensure=1) and p.open(ensure=1)
  where ensure triggers creation of neccessary parent
  dirs.


Changes between 1.4.14 and 1.4.15
==================================================

- majorly speed up some common calling patterns with
  LocalPath.listdir()/join/check/stat functions considerably.

- fix an edge case with fnmatch where a glob style pattern appeared
  in an absolute path.

Changes between 1.4.13 and 1.4.14
==================================================

- fix dupfile to work with files that don't
  carry a mode. Thanks Jason R. Coombs.

Changes between 1.4.12 and 1.4.13
==================================================

- fix getting statementrange/compiling a file ending
  in a comment line without newline (on python2.5)
- for local paths you can pass "mode=True" to a copy()
  in order to copy permission bits (underlying mechanism
  is using shutil.copymode)
- add paths arguments to py.path.local.sysfind to restrict
  search to the diretories in the path.
- add isdir/isfile/islink to path.stat() objects allowing to perform